# steamboy

./: .gitignore  AGENTS.md  README.md  next.config.ts  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy-vercel.yml
app/: layout.tsx  main.py  page.tsx  styles.css
app/api/jobs/: route.ts
app/api/jobs/[id]/: route.ts
app/api/upload/: route.ts
lib/: jobs.ts  types.ts
python/: analyze.py  scoring.py
python/tests/: test_scoring.py
scripts/: smoke_test.py
src/highlight_finder/: __init__.py  audio.py  candidates.py  cli.py  config.py  exporter.py  media.py  models.py  ranking.py  report.py  scenes.py  visual.py
src/highlight_finder/semantic/: __init__.py  base.py  heuristic.py  openai_compatible.py
tests/: test_core.py
workflows/: analyze.ts
